--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,6 +17,8 @@ on:
       - "main"
       - "dev"
       - "feature/**"
+      - "hotfix/**"
+      - "fix/**"
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
